# gst-plugins-edgeimpulse

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.codico  Dockerfile.test  README.md  build.rs  crates.js  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  help.html  rename-library.sh  search-index.js  settings.html  src-files.js  test-cross-compilation.sh  test-e2e.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  e2e.yml
docs/: edgeimpulseaudioinfer.md  edgeimpulsecontinueif.md  edgeimpulsecrop.md  edgeimpulseoverlay.md  edgeimpulsesink.md  edgeimpulsevideoinfer.md
examples/: audio_classify.rs  audio_inference.rs  audio_ingestion.rs  benchmark_rb3.sh  continue_if.rs  dynamic_crop.rs  image_inference.rs  image_slideshow.rs  video_classify.rs  video_inference.rs
gstedgeimpulse/: all.html  index.html  sidebar-items.js
gstedgeimpulse/plugin_desc/: fn.gst_plugin_edgeimpulse_get_desc.html  fn.gst_plugin_edgeimpulse_register.html  fn.plugin_register_static.html  index.html  sidebar-items.js  struct.GstPluginDesc.html
search.desc/gstedgeimpulse/: gstedgeimpulse-desc-0-.js
src/: common.rs  lib.rs  meta.rs
src/audio/: imp.rs  mod.rs
src/crop/: imp.rs  meta.rs  mod.rs
src/edgeimpulse/: imp.rs
src/filter/: imp.rs  mod.rs
src/gstedgeimpulse/: common.rs.html  lib.rs.html
src/gstedgeimpulse/audio/: imp.rs.html  mod.rs.html
src/gstedgeimpulse/overlay/: imp.rs.html  mod.rs.html
src/gstedgeimpulse/video/: imp.rs.html  mod.rs.html
src/overlay/: imp.rs  mod.rs
src/sink/: imp.rs  mod.rs
src/video/: imp.rs  meta.rs  mod.rs  nv12.rs
tests/: e2e.rs  nv12_pipeline.rs
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
