[package]
name = "gst-plugin-edgeimpulse"
version = "0.1.0"
edition = "2021"
description = "GStreamer Edge Impulse Plugin"
authors = ["Fernando Jiménez Moreno <fernando@edgeimpulse.com>"]

[lib]
name = "gstedgeimpulse"
crate-type = ["cdylib"]

[dependencies]
edge_impulse_runner = { path = "../edgeimpulse_runner_rs" }
glib = "0.20.7"
gstreamer = "0.23.4"
gstreamer-base = "0.23.4"
gstreamer-audio = "0.23.4"
once_cell = "1.20.3"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"