[package]
name = "gst-plugin-edgeimpulse"
version = "0.1.0"
edition = "2021"
description = "GStreamer plugin to run AI/ML inference via Edge Impulse machine learning models"
authors = ["Fernando Jiménez Moreno <fernando@edgeimpulse.com>"]
license = "BSD-3-Clause-Clear"

[lib]
name = "gstedgeimpulse"
crate-type = ["cdylib"]

[dependencies]
edge_impulse_runner = { path = "../edgeimpulse_runner_rs" }
glib = "0.20.7"
gstreamer = "0.23.4"
gstreamer-base = "0.23.4"
gstreamer-audio = "0.23.4"
once_cell = "1.20.3"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
gst-plugin-version-helper = "0.8.2"