[package]
name = "gst-plugins-edgeimpulse"
version = "0.1.0"
edition = "2021"
description = "GStreamer plugin to run AI/ML inference via Edge Impulse machine learning models"
authors = ["Fernando Jiménez Moreno <fernando@edgeimpulse.com>"]
license = "BSD-3-Clause-Clear"

[lib]
name = "gstedgeimpulse"
crate-type = ["cdylib"]

[dependencies]
cairo-rs = "0.20.7"
glib = "0.20.7"
gstreamer = "0.23.4"
gstreamer-audio = "0.23.4"
gstreamer-base = "0.23.4"
gstreamer-video = "0.23.4"
hound = "3"
image = "0.24"
once_cell = "1.20.3"
pango = "0.20.9"
pangocairo = "0.20.7"
regex = "1.10.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
edge-impulse-runner = { git = "https://github.com/edgeimpulse/edge-impulse-runner-rs.git" }
tempfile = "3.10"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
cocoa = "0.26.0"
objc = "0.2.7"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"